# Masterthesis

./: Master_TryOut.ipynb  README.md  calculate_correlation.py  calculate_oqapi.py  compare_rasters.py  config.py  download_osm_data.py  download_worldcover_data.py  pyproject.toml  run_full_analysis.py
appendix/: Raster_ColorLegend.qml
appendix/Change Indication OSM/: f000id000_osm_loss_of_nature.geojson  f000id000_osm_loss_of_nature_aggregated_vegetation.tif  f000id001_osm_loss_of_nature.geojson  f000id001_osm_loss_of_nature_aggregated_vegetation.tif  f000id002_osm_loss_of_nature.geojson  f000id002_osm_loss_of_nature_aggregated_vegetation.tif  f000id003_osm_loss_of_nature.geojson  f000id003_osm_loss_of_nature_aggregated_vegetation.tif  f000id004_osm_loss_of_nature.geojson  f000id004_osm_loss_of_nature_aggregated_vegetation.tif  f000id005_osm_loss_of_nature.geojson  f000id005_osm_loss_of_nature_aggregated_vegetation.tif  f000id006_osm_loss_of_nature.geojson  f000id006_osm_loss_of_nature_aggregated_vegetation.tif  f000id007_osm_loss_of_nature.geojson  f000id007_osm_loss_of_nature_aggregated_vegetation.tif  f000id008_osm_loss_of_nature.geojson  f000id008_osm_loss_of_nature_aggregated_vegetation.tif  f000id009_osm_loss_of_nature.geojson  f000id009_osm_loss_of_nature_aggregated_vegetation.tif  f000id010_osm_loss_of_nature.geojson  f000id010_osm_loss_of_nature_aggregated_vegetation.tif  f000id011_osm_loss_of_nature.geojson  f000id011_osm_loss_of_nature_aggregated_vegetation.tif  f000id012_osm_loss_of_nature.geojson  f000id012_osm_loss_of_nature_aggregated_vegetation.tif  f000id013_osm_loss_of_nature.geojson  (+32 more)
data/: buffersizes.txt  classcodes.txt  keyconfidences.txt  logging.yml
(+196 files in other folders)
