[tool.poetry]
name = "poetry_masterthesis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <=3.11"
jupyter = "^1.0.0"
earthengine-api = "^0.1.337"
folium = "^0.14.0"
terracatalogueclient = {version = "^0.1.14", source = "terracatalogueclient"}
geojson = {version = "^3.0.0", source = "pypi"}
geopandas = "^0.12.2"
rasterio = "^1.3.6"
geocube = "^0.4.0"
httpx = "^0.23.3"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
scipy = "^1.11.3"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
scikit-image = "^0.22.0"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "terracatalogueclient"
url = "https://artifactory.vgt.vito.be/api/pypi/python-packages/simple"
default = false
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
